private/cockpit/proxy_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-proxy-service
  namespace: plc
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: plc-cloud-backend-transport@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ports:
  - port: 443
    protocol: TCP
    targetPort: 56000
    name: tcp-https
  - port: 4444
    protocol: TCP
    targetPort: 56004
    name: tcp-grcp-web
  - port: 5555
    protocol: TCP
    targetPort: 56000
    name: tcp-http2
  selector:
    name: cloud-proxy-server
