private/cockpit/cloud_ingress_https.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress-https
  namespace: plc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pixie.austrianopencloudcommunity.org,work.pixie.austrianopencloudcommunity.org
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: cloud-backend-transport@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - pixie.austrianopencloudcommunity.org
    - work.pixie.austrianopencloudcommunity.org
    secretName: cloud-proxy-tls-certs
  rules:
  - host: pixie.austrianopencloudcommunity.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 443
  - host: work.pixie.austrianopencloudcommunity.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 443
